# Quadruped-Control-OCS2-ROS2

./: MUJOCO_LOG.TXT
legged_control/launch_simulation/launch/: legged_robot_sqp.launch.py
legged_control/motion_control/: CMakeLists.txt
legged_control/motion_control/include/motion_control/legged_wbc/: WeightedWbc.h
legged_control/motion_control/src/legged_wbc/: WeightedWbc.cpp
legged_control/motion_control/src/ros_interfaces/: MPC_WBC_ROS_Interface.cpp
legged_control/mujoco_simulator/: CMakeLists.txt  package.xml
legged_control/mujoco_simulator/include/mujoco_simulator/: MujocoSimulation.hpp
legged_control/mujoco_simulator/models/a1/urdf/: robot.xml
legged_control/mujoco_simulator/models/a2/urdf/: robot.urdf  robot.xml
legged_control/mujoco_simulator/models/b1/urdf/: robot.xml
legged_control/mujoco_simulator/models/go2/urdf/: generate_ocs2_urdf.py  robot.urdf  robot.xml
legged_control/mujoco_simulator/models/go2w/urdf/: generate_ocs2_urdf.py  robot.urdf  robot.xml
legged_control/mujoco_simulator/src/: MujocoSimulation.cpp
legged_control/user_command/config/a1/: reference.info  task.info
legged_control/user_command/config/a2/: reference.info  task.info
legged_control/user_command/config/go2/: gait.info  reference.info  simulation.info  task.info
legged_control/user_command/config/go2w/: reference.info  simulation.info  task.info
legged_control/user_command/src/: UserCommandNode.cpp
legged_control/user_command/src/goal/: TargetTrajectoriesKeyboardPublisher.cpp
(+1 files in other folders)
